<resources>
    <string name="app_name">Cnex</string>

    <!--    WelcomeDialog -->
    <string name="welcome_screen_brief">Welcome to Cnex. We’re all about bringing you fresh styles and quality fits that keep you looking your best. No complicated setup here, just simple, straightforward shopping.Whenever you’re ready, just hit continue and let’s get into it.</string>
    <string name="welcome_screen_title">Welcome to Cnex</string>
    <string name="welcome_btn_text">Continue</string>

    <!--    SignInActivity Text-->
    <string name="sign_in_txt">Sign In</string>
    <string name="email_placeholder_hint">Email Address</string>
    <string name="password_placeholder_hint">Password</string>
    <string name="continue_btn_txt">Continue</string>
    <string name="sign_up_link_text">Don’t have an account ?</string>
    <string name="sign_up_link">Create one</string>
    <string name="sign_in_back">Back to login</string>
    <string name="forgot_password_link_text">Forgot Password ?</string>
    <string name="forgot_password_link">Reset</string>
    <string name="hello">Hello!</string>
    <string name="sign_in_welcome">Welcome to Cnex</string>

    <!--    SignUpActivity Text-->
    <string name="sign_up_txt">Sign Up</string>
    <string name="firstname_placeholder_hint">Firstname</string>
    <string name="lastname_placeholder_hint">Lastname</string>
    <string name="logo_name">Cnex</string>

    <!--    HomeActivityText-->
    <string name="home_search_hint">Search</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="checkout">Proceed to Checkout</string>
    <string name="cart">Cart</string>
    <string name="mycart">MyCart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="wishlist">Wishlist</string>
    <string name="account">Account</string>
    <string name="see_all">See All</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="view_all">View All</string>
</resources>