<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding_default"
    tools:context=".fragment.SignInEmailFragment">

    <EditText
        android:id="@+id/emailSignInInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/edit_text_size"
        android:drawablePadding="@dimen/edit_text_icon_padding"
        android:drawableStart="@drawable/emailicon"
        android:padding="@dimen/edit_text_padding"
        android:hint="@string/email_placeholder_hint"/>

    <Button
        android:layout_marginTop="@dimen/default_margin_top"
        android:id="@+id/emailContinueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/continue_btn_txt"
        android:textSize="@dimen/button_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin_top"
        android:orientation="horizontal">

        <TextView
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/link_click_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_link_text" />

        <TextView
            android:layout_marginStart="2dp"
            android:id="@+id/sign_up_link_view"
            android:textSize="@dimen/link_click_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up_link" />
    </LinearLayout>



</LinearLayout>