<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <View
        android:id="@+id/bottomBackgroundCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_login_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sign_up_back_btn" />

<!--    <LinearLayout-->
<!--        android:id="@+id/sign_up_back_layout"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingTop="15dp"-->
<!--        android:layout_marginHorizontal="@dimen/default_margin_horizontal"-->
<!--        android:layout_marginBottom="@dimen/small_margin_bottom"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/SignUpText"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->


<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:srcCompat="@drawable/smallarrowleft" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="2dp"-->
<!--            android:fontFamily="@font/poppins"-->
<!--            android:paddingLeft="@dimen/small_padding"-->
<!--            android:text="@string/sign_in_back"-->
<!--            android:textSize="@dimen/link_click_text_size"-->
<!--            android:textStyle="bold" />-->
<!--    </LinearLayout>-->

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/sign_up_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/sign_in_back"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        android:layout_marginBottom="@dimen/small_margin_bottom"
        android:fontFamily="@font/poppins"
        android:padding="0dp"
        android:textSize="@dimen/link_click_text_size"
        app:icon="@drawable/smallarrowleft"
        app:layout_constraintBottom_toTopOf="@+id/SignUpText"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_up_txt"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        android:layout_marginVertical="@dimen/layout_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpText">

        <EditText
            android:id="@+id/firstNameSignUpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/usericon"
            android:drawablePadding="@dimen/edit_text_icon_padding"
            android:fontFamily="@font/poppins"
            android:hint="@string/firstname_placeholder_hint"
            android:inputType="text"
            android:padding="@dimen/edit_text_padding"
            android:textSize="@dimen/edit_text_size" />

        <EditText
            android:id="@+id/lastNameSignUpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/usericon"
            android:layout_marginTop="@dimen/default_margin_top"
            android:drawablePadding="@dimen/edit_text_icon_padding"
            android:fontFamily="@font/poppins"
            android:hint="@string/lastname_placeholder_hint"
            android:inputType="text"
            android:padding="@dimen/edit_text_padding"
            android:textSize="@dimen/edit_text_size" />

        <EditText
            android:id="@+id/emailSignUpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_top"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/emailicon"
            android:drawablePadding="@dimen/edit_text_icon_padding"
            android:fontFamily="@font/poppins"
            android:hint="@string/email_placeholder_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/edit_text_padding"
            android:textSize="@dimen/edit_text_size"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="65dp" />
        <EditText
            android:id="@+id/passwordSignUpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_top"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/passwordicon"
            android:drawablePadding="@dimen/edit_text_icon_padding"
            android:fontFamily="@font/poppins"
            android:hint="@string/password_placeholder_hint"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_padding"
            android:textSize="@dimen/edit_text_size"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="65dp" />

        <Button
            android:id="@+id/signUpContinueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_top"
            android:fontFamily="@font/poppins"
            android:text="@string/continue_btn_txt"
            android:textSize="@dimen/button_text_size" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>