<?xml version="1.0" encoding="utf-8"?>
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_25"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginHorizontal="@dimen/layout_margin"
            tools:context=".activity.HomeActivity">

            <TextView
                android:id="@+id/h_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/logo_name"
                android:textSize="@dimen/logo_font_size"
                android:textColor="?attr/textColorCustom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.TextButton"
                android:id="@+id/homeNotificationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingVertical="0dp"
                app:cornerRadius="50dp"
                android:paddingHorizontal="5dp"
                app:icon="@drawable/notificationicon"
                app:iconGravity="textEnd"
                app:iconPadding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
               />

            <EditText
                android:id="@+id/h_search_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/small_margin_vertical"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/searchicon"
                android:drawablePadding="@dimen/edit_text_icon_padding"
                android:fontFamily="@font/poppins"
                android:hint="@string/home_search_hint"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/h_logo"
                android:padding="@dimen/edit_text_padding"
                android:textSize="@dimen/edit_text_size" />


            <LinearLayout
                android:layout_marginVertical="@dimen/small_margin_vertical"
                android:id="@+id/categoriesLayoutHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/h_search_edittext">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:includeFontPadding="false"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/sub_heading_size"
                    android:text="Categories" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/rightsmallarrow"
                    app:iconGravity="textEnd"
                    app:iconPadding="4dp"
                    android:fontFamily="@font/poppins"
                    app:iconTint="?attr/textColorCustom"
                    android:textColor="?attr/textColorCustom"
                    android:includeFontPadding="false"
                    android:gravity="center_vertical"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingVertical="0dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/see_all"
                    android:textAllCaps="false"
                    android:textSize="@dimen/sub_heading_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_categories_recycle"
                android:layout_marginVertical="@dimen/small_margin_vertical"
                android:layout_width="0dp"
                android:nestedScrollingEnabled="false"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoriesLayoutHome" />

            <LinearLayout
                android:id="@+id/newArrivalsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/small_margin_vertical"
                android:layout_marginTop="1dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_categories_recycle">

                <TextView
                    android:includeFontPadding="false"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins"
                    android:gravity="center_vertical"
                    android:text="@string/new_arrivals"
                    android:textSize="@dimen/sub_heading_size" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:iconTint="?attr/textColorCustom"
                    android:textColor="?attr/textColorCustom"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/view_all"
                    android:textStyle="bold"
                    android:paddingVertical="0dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:id="@+id/newArrivalsHome"
                    app:icon="@drawable/rightsmallarrow"
                    app:iconGravity="textEnd"
                    app:iconPadding="4dp"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_arrivals_home_recycle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newArrivalsLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
